<resources>
    <string name="app_name">ArDrawing</string>
    <string name="loading">로딩중...</string>

    <!-- Splash -->
    <string name="splsh_content_description">Splash</string>

    <!-- Login -->
    <string name="login_content_description">Login</string>
    <string name="login_tv_app_name_1">Creative Drawing</string>
    <string name="login_tv_app_name_2">Education</string>

    <!-- Main -->
    <string name="main_tv_user_name_tool">조현우님 반갑습니다!</string>
    <string name="main_tv_user_name_after">님 반갑습니다!</string>
    <string name="main_tv_enter">방 입장</string>
    <string name="main_tv_mine">내 그림</string>
    <string name="main_tv_logout">로그아웃</string>

    <!-- Entrance -->
    <string name="entrance_content_description">Enterance</string>
    <string name="entrance_tv_search">검색</string>
    <string name="entrance_tv_room_title">방 제목</string>
    <string name="entrance_tv_room_person">인원</string>
    <string name="entrance_tv_room_title_tools">인하초등학교 3학년 1반</string>
    <string name="entrance_tv_room_person_tools">12/30</string>
    <string name="entrance_menu_create">방 생성</string>
    <string name="entrance_menu_remove">방 제거</string>
    <string name="entrance_person_limit">/ 30</string>
    <string name="entrance_menu_remove_toast">제거할 방을 고르세요</string>
    <string name="entrance_menu_remove_person_exist_toast">방에 사용자가 존재합니다</string>

    <!-- Create -->
    <string name="create_room_title">방 제목 (필수)</string>
    <string name="create_room_password">비밀번호 (필수)</string>
    <string name="create_room_btn">생성</string>
    <string name="create_room_already_same_title">이미 해당 제목의 방이 존재합니다.</string>
    <string name="create_room_title_input">방 제목을 입력해 주세요!</string>
    <string name="create_room_password_input">비밀번호를 입력해 주세요!</string>

    <!-- My Draw -->
    <string name="my_draw_tv_how_draw_tool">0 photos</string>
    <string name="my_draw_menu_remove">삭제하기</string>
    <string name="my_draw_menu_remove_all">일괄삭제</string>
    <string name="my_draw_tv_check_remove">삭제할 그림을 선택해 주세요.</string>
    <string name="my_draw_dialog_title">그림 위치</string>
    <string name="my_draw_dialog_remove_all_content">모든 그림을 삭제하시겠습니까?</string>


    <!-- Brush -->
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

</resources>
