<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_create_back_arrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/entrance_content_description"
            android:onClick="OnClick"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/entrance_menu_create"
            android:textColor="@android:color/black"
            android:textSize="25dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginTop="30dp"
        android:text="@string/create_room_title"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edt_create_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/src_create_background"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginTop="20dp"
        android:text="@string/create_room_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_create_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/src_create_background"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/btn_create"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="OnClick"
        android:background="@drawable/src_main_background"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/create_room_btn"
        android:textSize="20sp" />


</LinearLayout>