<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_my_draw_back_arrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/entrance_content_description"
            android:onClick="OnClick"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_tv_mine"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_my_draw_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/entrance_content_description"
            android:onClick="OnClick"
            android:padding="15dp"
            android:src="@drawable/ic_menu" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_my_draw_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/my_draw_tv_how_draw_tool"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_draw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_my_draw" />


</LinearLayout>